@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel" meta_type="Plone Control Panel Tool">
+
+ <configlet title="LandItems Overview" action_id="LandItemsOverview"
+    appId="land.copernicus.content" category="Products" condition_expr=""
+    url_expr="string:${portal_url}/@@overview"
+    visible="True">
+  <permission>Manage portal</permission>
+ </configlet>
+
+</object>
