@@ -1,0 +1,19 @@
+<configure
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:zcml="http://namespaces.zope.org/zcml"
+  xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+  i18n_domain="eea">
+
+  <genericsetup:upgradeSteps
+      source="*"
+      destination="1.6"
+      profile="land.copernicus.content:default">
+
+    <genericsetup:upgradeDepends
+      title="Upgrade step for land.copernicus.content: import controlpanel"
+      import_steps="controlpanel"
+      />
+
+  </genericsetup:upgradeSteps>
+
+</configure>
