@@ -3,6 +3,8 @@ Changelog
 
 1.6-dev - (unreleased)
 ----------------------
+* Feature: added configlet for @@overview page
+  [robaaoli #17440]
 * Feature: added landitems administrative @@overview page
   [robaaoli #17440]
 
